# the_project

./: .gitignore  OVERVIEW.md  README.html  README.md
backend/: create_table.sql  init_db.ps1  pyproject.toml  start_backend.ps1
backend/app/: pyproject.toml
backend/app/app/: main.py  test_database.py  test_main.py
backend/app/app/workers/: database.py  echo.py
backend/backend/: __main__.py  main.py
backend/database/: prod.db
backend/test_backend/: test_main.py
database/: create_database.sql  init_database.sql  install_postgres.sh
etl/: README.md  pyproject.toml  requirements.txt  taskmaster.py
etl/etl/: __main__.py  taskmaster.py
etl/etl/source/: __init__.py  aqicn.py
etl/scripts/: extract_from_aqicn.py  extract_from_gsheet.py
etl/test/: launch_postgres.ps1  launch_rabbitmq.ps1  test_source_aqicn.py
etl/test_etl/: launch_rabbitmq.ps1  test_source_aqicn.py
etl/tests/: launch_postgres.ps1  test_extract_from_aqicn.py  test_extract_from_gsheet.py  test_source_aqicn.py  test_taskmaster.py
etl/tests/test_extract_from_gsheet/: sample_data.csv
frontend/: package.json
frontend/frontend/: index.html  package-lock.json  package.json  start_frontend.ps1  vite.config.ts
frontend/frontend/src/: App.tsx  GaugeChart.tsx
infrastructure/: .gitignore  build_backend.sh  build_database.sh  build_frontend.sh  build_mq.sh  init.sh  init_database.sql  install_docker.sh  main.tf
