[project]
name = "app_backend"
requires-python = ">=3.9"
version = "0.0.1"

dependencies = [
  "fastapi",
  "uvicorn[standard]"
]

[tool.setuptools]
packages = ["etl", "test_etl]

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]