[project]
name = "app_backend"
requires-python = ">=3.9"
version = "0.0.1"

dependencies = [
  "fastapi",
  "uvicorn[standard]"
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["etl"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]