[tool.setuptools]
packages = ["backend"]

[project]
name = "backend"
requires-python = ">=3.9"
version = "0.0.1"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "psycopg[binary]",
  "pika"
]

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]